fix overflow

--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,9 @@ html, body {
 
 	&.-overflow {
 		overflow: hidden;
+	}
 
+	&.-overflowStart {
 		&>* { display: none; }
 		&>.intro { display: block; }
 	}
